# progettoProgrammazione

./: AbstractSubject.cpp  AbstractSubject.h  CMakeLists.txt  Frame.cpp  Frame.h  LoadingHandler.cpp  LoadingHandler.h  MainFrame.cpp  MainFrame.h  Observer.h  frame.cpp  frame.h  main.cpp
test/: CMakeLists.txt  LoadingHandlerSuite.cpp  MainFrameTest.cpp  TestObserver.cpp  TestObserver.h
